--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://rishavpal309:<6397661626>@personal01.gjqkp9c.mongodb.net/?retryWrites=true&w=majority&appName=Personal01&tls=true
+MONGODB_URI=mongodb+srv://rishavpal309:<6397661626>@personal01.gjqkp9c.mongodb.net/DisasterData?retryWrites=true&w=majority&appName=Personal01&tls=true
 MONGODB_DB=DisasterData
 EMDAT_USERNAME=rishavpal309@gmail.com
 EMDAT_PASSWORD=@Rishabh6397
